--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NombreProyecto</title>
+    <title>@ViewData["Title"] - TestMaster</title>
+    <link rel="icon" type="image/x-icon" href="/imgs/TestMaster_logo.ico">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 
 <body>
     <header>
-        NombreProyecto
+        TestMaster
     </header>
 
     <main role="main">
@@ -18,7 +19,7 @@
     </main>
 
     <footer>
-        &copy; @DateTime.Now.Year - NombreProyecto
+        &copy; @DateTime.Now.Year - TestMaster
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
